cabal-version:       3.0
name:                pasta-curves
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/eschorn@integritychain.com/pasta-curves#pasta-curves) for more details.
homepage:            https://github.com/eschorn@integritychain.com/pasta-curves
bug-reports:         https://github.com/eschorn@integritychain.com/pasta-curves/issues
license:             MIT
license-file:        LICENSE
author:              Eric Schorn
maintainer:          Eric Schorn <eschorn@integritychain.com>
copyright:           2022 Eric Schorn
category:            Cryptography, Elliptic Curves
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/eschorn@integritychain.com/pasta-curves.git

common common-options
  build-depends:       base ^>= 4.15,
                       protolude == 0.2.4,
                       cryptonite == 0.29,
                       memory == 0.16.0,
                       bytestring == 0.10.12.1,
                       text == 1.2.5.0,
                       template-haskell == 2.17.0.0

  other-modules:       Fields, Curves, Constants

  ghc-options:         -Weverything
                       -Wno-missing-import-lists
                       -Wno-unsafe
                       -Wno-all-missed-specialisations
                       
--  ghc-options:         -Wall
--                       -Wcompat
--                       -Widentities
--                       -Wincomplete-uni-patterns
--                       -Wincomplete-record-updates
--                       -Wredundant-constraints
--                       -Wnoncanonical-monad-instances
--  if impl(ghc >= 8.2)
--    ghc-options:       -fhide-source-paths
--  if impl(ghc >= 8.4)
--    ghc-options:       -Wmissing-export-lists
--                       -Wpartial-fields
--  if impl(ghc >= 8.8)
--    ghc-options:       -Wmissing-deriving-strategies
--                       -fwrite-ide-info
--                       -hiedir=.hie
--  if impl(ghc >= 8.10)
--    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src/Crypto/ECC
  exposed-modules:     PastaCurves

executable pasta-curves
  import:              common-options
  hs-source-dirs:      app, src/Crypto/ECC
  main-is:             Main.hs
  build-depends:       pasta-curves
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite pasta-curves-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src/Crypto/ECC
  main-is:             Spec.hs
  other-modules:       TestFields
  build-depends:       pasta-curves,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark pasta-curves-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark, src/Crypto/ECC
  main-is:             Main.hs
  build-depends:       pasta-curves
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
